2024-12-03T00:54:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12130803238 # 498
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-03
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 427 817 / 429 819
* notice: next accum: outdated-unq outdated-all / unq all: 427 817 / 430 820
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-02]

2024-11-29T00:52:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12077199472 # 494
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-29
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 426 816 / 429 819
* notice: next accum: outdated-unq outdated-all / unq all: 427 817 / 429 819
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-15] / []

2024-11-27T00:52:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12041650447 # 492
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-27
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 425 815 / 429 819
* notice: next accum: outdated-unq outdated-all / unq all: 426 816 / 429 819
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-13] / []

2024-11-22T00:52:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11964347675 # 487