@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-03T00:54:01Z",
-  "count_outdated" : 817,
-  "uniques_outdated" : 427,
+  "timestamp" : "2024-12-04T00:54:01Z",
+  "count_outdated" : 818,
+  "uniques_outdated" : 428,
   "count" : 820,
   "uniques" : 430,
   "clones" : [
-    {
-      "timestamp": "2024-11-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-11-21T00:00:00Z",
       "count": 1,
